# Zeta

./: FileReader.c  Generator.c  Lexer.c  Linezer.c  Linezer.h  OpCode.c  OpCode.h  Prepass.h  README.md  Token.c
zasm/: .gitignore  README.md  build.sh  run.sh
zasm/Examples/: fib.zasm  hello_world.zasm  name.zasm  strcmp.zasm  test.zasm  test.zexec
zasm/Examples/std/: common_macros.zasm  io.zasm  std.zasm  string.zasm
zasm/src/: CMakeLists.txt  FileReader.h  Generator.c  Generator.h  Lexer.c  Lexer.h  Parser.c  Parser.h  Prepass.c  Token.h  zasm.c
zasm/src/common/: ByteUtils.c  ByteUtils.h  ConfigFlags.h  Configs.h  DyArray.h  Hashmap.c  Hashmap.h  Log.c  Log.h  cwalk.c  cwalk.h
zvm/: README.md  build.sh  run.sh
zvm/Examples/: test.zexec{
zvm/src/: CMakeLists.txt  Memory.c  Memory.h  Stack.c  Stack.h  Token.h  VM.c  VM.h  zvm.c
zvm/src/common/: ByteUtils.h  CommonStructs.h  ConfigFlags.h  ConfigFlags.h.c  Configs.h  Hashmap.c  SV.c  SV.h
